--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 <body>
-
+    <!--top header section-->
     <div class="top-section">
         <div class="text-wrap animated zoomIn">
             <h1>Speed Up Your Wordpress Site</h1>
             <p>BY UPLOADING YOUR MEDIA AND ASSETS TO AMAZON S3 AND CLOUDFRONT</p>
             <button class="btn btn-theme">Get Started - free for now</button>
         </div>
+        <!--navigation  section-->
         <div id="section-first" class="main-section">
             <div class="header-section">
                 <nav class="navbar navbar-default">
@@ -50,6 +51,7 @@
             </div>
         </div>
     </div>
+    <!--services icon  section-->
     <div id="section-three">
     <div class="middle-section section second">
         <div class="page-content">
@@ -79,6 +81,7 @@
             </div>
         </div>
     </div>
+    <!--feature section-->
     <div  class="lower-middle-section third">
         <div class="page-content overflow-class">
             <div class="container">
@@ -99,7 +102,8 @@
             </div>
         </div>
     </div>
-        </div>
+    </div>
+    <!--faq section-->
     <div id="section-four" class="bottom-section fourth">
        <div class="page-content">
             <div class="container animation-element slide-left">
@@ -130,8 +134,7 @@
             </div>
         </div>
    </div>
-       
- 
+    <!--footer section-->
     <footer class="footer">
         <div class="page-content">
             <div class="container">
@@ -170,11 +173,13 @@
         </div>
     </footer>
     <script type="text/javascript">
+         //navbar toggle script
         $(document).ready(function () {
             $('.navbar-toggle').click(function () {
                 $('.navbar-collapse').slideToggle();
             });
         });
+          //header sticky  script
         $(window).scroll(function () {
             var sticky = $('.navbar-default'),
                 scroll = $(window).scrollTop();
@@ -205,7 +210,7 @@
                 }
             });
         }
-
+        //animation script
         $window.on('scroll resize', check_if_in_view);
         $window.trigger('scroll');
         $(function () {
